<resources>
    <string name="app_name">enviMove</string>

    <string name="title_map">Map</string>
    <string name="title_bus">Lines</string>
    <string name="title_fav">Favorites</string>
    <string name="title_alert">Alerts</string>
    <string name="title_settings">Settings</string>
    <string name="write_bus">Enter bus stop name…</string>
    <string name="menu_refresh">Refresh</string>
    <string name="about">2018 - Orazio Scicolone</string>
</resources>
