<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_warning_white_24dp"
        android:title="@string/title_alert" />

    <item
        android:id="@+id/navigation_bus"
        android:icon="@drawable/ic_directions_bus_white_24dp"
        android:title="@string/title_bus" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/title_fav" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/title_settings" />

</menu>
